
ADD_SUBDIRECTORY(GameStart)

IF (DTANIM_AVAILABLE)
  ADD_SUBDIRECTORY(AnimationViewer)
  ADD_SUBDIRECTORY(ObjectViewer)
ENDIF (DTANIM_AVAILABLE)

IF (FLTK_FOUND)
  ADD_SUBDIRECTORY(Viewer)
  ADD_SUBDIRECTORY(psEditor)
ENDIF (FLTK_FOUND)

IF (DTAUDIO_AVAILABLE)
  ADD_SUBDIRECTORY(STAGE)
ENDIF (DTAUDIO_AVAILABLE)

IF (BUILD_3DSMAX_PLUGIN)
  FIND_PACKAGE(3DS REQUIRED)
  ADD_SUBDIRECTORY(Exporters/3DSMax)
ENDIF (BUILD_3DSMAX_PLUGIN)
