
ADD_SUBDIRECTORY(GameStart)

IF (DTANIM_AVAILABLE AND QT4_FOUND)
  ADD_SUBDIRECTORY(AnimationViewer)
  ADD_SUBDIRECTORY(ObjectViewer)
ENDIF (DTANIM_AVAILABLE AND QT4_FOUND)

IF (FLTK_FOUND)
  ADD_SUBDIRECTORY(Viewer)
  ADD_SUBDIRECTORY(psEditor)
ENDIF (FLTK_FOUND)

IF (DTAUDIO_AVAILABLE AND DTANIM_AVAILABLE AND QT4_FOUND)
  ADD_SUBDIRECTORY(STAGE)
ENDIF (DTAUDIO_AVAILABLE AND DTANIM_AVAILABLE AND QT4_FOUND)

IF (BUILD_3DSMAX_PLUGIN)
  FIND_PACKAGE(3DS REQUIRED)
  ADD_SUBDIRECTORY(Exporters/3DSMax)
ENDIF (BUILD_3DSMAX_PLUGIN)
