
ADD_SUBDIRECTORY(GameStart)
ADD_SUBDIRECTORY(LMS)
ADD_SUBDIRECTORY(MapDump)

IF (QT4_FOUND)
  ADD_SUBDIRECTORY(ParticleEditor)
  ADD_SUBDIRECTORY(DirectorPlugins/DPDialogEditor)
  
  IF (DTANIM_AVAILABLE AND QT4_FOUND)
    ADD_SUBDIRECTORY(AnimationViewer)
    ADD_SUBDIRECTORY(ObjectViewer)
    ADD_SUBDIRECTORY(AIUtility)
    ADD_SUBDIRECTORY(ZipPlugin)

  ENDIF (DTANIM_AVAILABLE AND QT4_FOUND)
ENDIF (QT4_FOUND)

IF (DTAUDIO_AVAILABLE AND DTANIM_AVAILABLE AND QT4_FOUND)
  ADD_SUBDIRECTORY(STAGE)
ENDIF (DTAUDIO_AVAILABLE AND DTANIM_AVAILABLE AND QT4_FOUND)

IF (BUILD_3DSMAX_PLUGIN)
  FIND_PACKAGE(3DS REQUIRED)
  ADD_SUBDIRECTORY(Exporters/3DSMax)
ENDIF (BUILD_3DSMAX_PLUGIN)

